[fix] card align

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,8 @@ a:hover {
   background: url('./assets/banner.jpg') no-repeat center center;
   background-size: cover;
 }
+
+.text-nowrap {
+  overflow: hidden;
+  text-overflow: clip;
+}
